troubleshooting image urls on single channels

--- a/premium-business-music/chart-toppers/index.html
+++ b/premium-business-music/chart-toppers/index.html
@@ -59,7 +59,7 @@
               
           <img
             srcset="
-                /premium-business-music/chart-toppers/chart-toppers_huca93c1fdcff99b53e685f85c53567101_3137375_640x0_resize_q70_linear.jpg 768w,
+                premium-business-music/chart-toppers/chart-toppers_huca93c1fdcff99b53e685f85c53567101_3137375_640x0_resize_q70_linear.jpg 768w,
                 /premium-business-music/chart-toppers/chart-toppers_huca93c1fdcff99b53e685f85c53567101_3137375_768x0_resize_q70_linear.jpg 1024w,
                 /premium-business-music/chart-toppers/chart-toppers_huca93c1fdcff99b53e685f85c53567101_3137375_1366x0_resize_q70_linear.jpg 1920w,
                 /premium-business-music/chart-toppers/chart-toppers_huca93c1fdcff99b53e685f85c53567101_3137375_2048x0_resize_q70_linear.jpg 2x,
@@ -68,6 +68,8 @@
 
             "
             src="../../premium-business-music/chart-toppers/chart-toppers_huca93c1fdcff99b53e685f85c53567101_3137375_1366x0_resize_q70_linear.jpg" class="single-playlist-img " id="playerCover">
+
+            <a href="../../premium-business-music/chart-toppers/chart-toppers_huca93c1fdcff99b53e685f85c53567101_3137375_1366x0_resize_q70_linear.jpg">/premium-business-music/chart-toppers/chart-toppers_huca93c1fdcff99b53e685f85c53567101_3137375_1366x0_resize_q70_linear.jpg</a>
 
             
                 <figcaption class="text-tiny">
