--- a/premium-business-music/throwbacks-and-favs/index.html
+++ b/premium-business-music/throwbacks-and-favs/index.html
@@ -59,7 +59,7 @@
               
           <img
             srcset="
-                /premium-business-music/throwbacks-and-favs/throwbacks-and-favs_huabb4f75df0b955a3231d7244196f8415_4477621_640x0_resize_q70_linear.jpg 768w,
+                premium-business-music/throwbacks-and-favs/throwbacks-and-favs_huabb4f75df0b955a3231d7244196f8415_4477621_640x0_resize_q70_linear.jpg 768w,
                 /premium-business-music/throwbacks-and-favs/throwbacks-and-favs_huabb4f75df0b955a3231d7244196f8415_4477621_768x0_resize_q70_linear.jpg 1024w,
                 /premium-business-music/throwbacks-and-favs/throwbacks-and-favs_huabb4f75df0b955a3231d7244196f8415_4477621_1366x0_resize_q70_linear.jpg 1920w,
                 /premium-business-music/throwbacks-and-favs/throwbacks-and-favs_huabb4f75df0b955a3231d7244196f8415_4477621_2048x0_resize_q70_linear.jpg 2x,
@@ -68,6 +68,8 @@
 
             "
             src="../../premium-business-music/throwbacks-and-favs/throwbacks-and-favs_huabb4f75df0b955a3231d7244196f8415_4477621_1366x0_resize_q70_linear.jpg" class="single-playlist-img " id="playerCover">
+
+            <a href="../../premium-business-music/throwbacks-and-favs/throwbacks-and-favs_huabb4f75df0b955a3231d7244196f8415_4477621_1366x0_resize_q70_linear.jpg">/premium-business-music/throwbacks-and-favs/throwbacks-and-favs_huabb4f75df0b955a3231d7244196f8415_4477621_1366x0_resize_q70_linear.jpg</a>
 
             
                 <figcaption class="text-tiny">
