--- a/premium-business-music/turntable-numbers/index.html
+++ b/premium-business-music/turntable-numbers/index.html
@@ -59,7 +59,7 @@
               
           <img
             srcset="
-                /premium-business-music/turntable-numbers/turntable-numbers_hub6e423cccd43259cf1f8078b43409a44_4177972_640x0_resize_q70_linear.jpg 768w,
+                premium-business-music/turntable-numbers/turntable-numbers_hub6e423cccd43259cf1f8078b43409a44_4177972_640x0_resize_q70_linear.jpg 768w,
                 /premium-business-music/turntable-numbers/turntable-numbers_hub6e423cccd43259cf1f8078b43409a44_4177972_768x0_resize_q70_linear.jpg 1024w,
                 /premium-business-music/turntable-numbers/turntable-numbers_hub6e423cccd43259cf1f8078b43409a44_4177972_1366x0_resize_q70_linear.jpg 1920w,
                 /premium-business-music/turntable-numbers/turntable-numbers_hub6e423cccd43259cf1f8078b43409a44_4177972_2048x0_resize_q70_linear.jpg 2x,
@@ -68,6 +68,8 @@
 
             "
             src="../../premium-business-music/turntable-numbers/turntable-numbers_hub6e423cccd43259cf1f8078b43409a44_4177972_1366x0_resize_q70_linear.jpg" class="single-playlist-img " id="playerCover">
+
+            <a href="../../premium-business-music/turntable-numbers/turntable-numbers_hub6e423cccd43259cf1f8078b43409a44_4177972_1366x0_resize_q70_linear.jpg">/premium-business-music/turntable-numbers/turntable-numbers_hub6e423cccd43259cf1f8078b43409a44_4177972_1366x0_resize_q70_linear.jpg</a>
 
             
                 <figcaption class="text-tiny">
