--- a/premium-business-music/yesterdays-hits/index.html
+++ b/premium-business-music/yesterdays-hits/index.html
@@ -59,7 +59,7 @@
               
           <img
             srcset="
-                /premium-business-music/yesterdays-hits/yesterdays-hits_hu306031fbb2eb2b65fbdd5c038e0d2e71_2244008_640x0_resize_q70_linear.jpg 768w,
+                premium-business-music/yesterdays-hits/yesterdays-hits_hu306031fbb2eb2b65fbdd5c038e0d2e71_2244008_640x0_resize_q70_linear.jpg 768w,
                 /premium-business-music/yesterdays-hits/yesterdays-hits_hu306031fbb2eb2b65fbdd5c038e0d2e71_2244008_768x0_resize_q70_linear.jpg 1024w,
                 /premium-business-music/yesterdays-hits/yesterdays-hits_hu306031fbb2eb2b65fbdd5c038e0d2e71_2244008_1366x0_resize_q70_linear.jpg 1920w,
                 /premium-business-music/yesterdays-hits/yesterdays-hits_hu306031fbb2eb2b65fbdd5c038e0d2e71_2244008_2048x0_resize_q70_linear.jpg 2x,
@@ -68,6 +68,8 @@
 
             "
             src="../../premium-business-music/yesterdays-hits/yesterdays-hits_hu306031fbb2eb2b65fbdd5c038e0d2e71_2244008_1366x0_resize_q70_linear.jpg" class="single-playlist-img " id="playerCover">
+
+            <a href="../../premium-business-music/yesterdays-hits/yesterdays-hits_hu306031fbb2eb2b65fbdd5c038e0d2e71_2244008_1366x0_resize_q70_linear.jpg">/premium-business-music/yesterdays-hits/yesterdays-hits_hu306031fbb2eb2b65fbdd5c038e0d2e71_2244008_1366x0_resize_q70_linear.jpg</a>
 
             
                 <figcaption class="text-tiny">
