--- a/starter-business-music/acoustic-dream/index.html
+++ b/starter-business-music/acoustic-dream/index.html
@@ -59,7 +59,7 @@
               
           <img
             srcset="
-                /starter-business-music/acoustic-dream/acoustic-dream_hu807d929167f7d0a55a04eb438d97e4a9_1362015_640x0_resize_q70_linear.jpg 768w,
+                starter-business-music/acoustic-dream/acoustic-dream_hu807d929167f7d0a55a04eb438d97e4a9_1362015_640x0_resize_q70_linear.jpg 768w,
                 /starter-business-music/acoustic-dream/acoustic-dream_hu807d929167f7d0a55a04eb438d97e4a9_1362015_768x0_resize_q70_linear.jpg 1024w,
                 /starter-business-music/acoustic-dream/acoustic-dream_hu807d929167f7d0a55a04eb438d97e4a9_1362015_1366x0_resize_q70_linear.jpg 1920w,
                 /starter-business-music/acoustic-dream/acoustic-dream_hu807d929167f7d0a55a04eb438d97e4a9_1362015_2048x0_resize_q70_linear.jpg 2x,
@@ -68,6 +68,8 @@
 
             "
             src="../../starter-business-music/acoustic-dream/acoustic-dream_hu807d929167f7d0a55a04eb438d97e4a9_1362015_1366x0_resize_q70_linear.jpg" class="single-playlist-img starter" id="playerCover">
+
+            <a href="../../starter-business-music/acoustic-dream/acoustic-dream_hu807d929167f7d0a55a04eb438d97e4a9_1362015_1366x0_resize_q70_linear.jpg">/starter-business-music/acoustic-dream/acoustic-dream_hu807d929167f7d0a55a04eb438d97e4a9_1362015_1366x0_resize_q70_linear.jpg</a>
 
             
         </figure>
