--- a/starter-business-music/fresh-and-trendy/index.html
+++ b/starter-business-music/fresh-and-trendy/index.html
@@ -59,7 +59,7 @@
               
           <img
             srcset="
-                /starter-business-music/fresh-and-trendy/fresh-and-trendy_hua8d612fc5be254aa8d571fca08cfcb49_994792_640x0_resize_q70_linear.jpg 768w,
+                starter-business-music/fresh-and-trendy/fresh-and-trendy_hua8d612fc5be254aa8d571fca08cfcb49_994792_640x0_resize_q70_linear.jpg 768w,
                 /starter-business-music/fresh-and-trendy/fresh-and-trendy_hua8d612fc5be254aa8d571fca08cfcb49_994792_768x0_resize_q70_linear.jpg 1024w,
                 /starter-business-music/fresh-and-trendy/fresh-and-trendy_hua8d612fc5be254aa8d571fca08cfcb49_994792_1366x0_resize_q70_linear.jpg 1920w,
                 /starter-business-music/fresh-and-trendy/fresh-and-trendy_hua8d612fc5be254aa8d571fca08cfcb49_994792_2048x0_resize_q70_linear.jpg 2x,
@@ -68,6 +68,8 @@
 
             "
             src="../../starter-business-music/fresh-and-trendy/fresh-and-trendy_hua8d612fc5be254aa8d571fca08cfcb49_994792_1366x0_resize_q70_linear.jpg" class="single-playlist-img starter" id="playerCover">
+
+            <a href="../../starter-business-music/fresh-and-trendy/fresh-and-trendy_hua8d612fc5be254aa8d571fca08cfcb49_994792_1366x0_resize_q70_linear.jpg">/starter-business-music/fresh-and-trendy/fresh-and-trendy_hua8d612fc5be254aa8d571fca08cfcb49_994792_1366x0_resize_q70_linear.jpg</a>
 
             
         </figure>
