--- a/starter-business-music/indie-days/index.html
+++ b/starter-business-music/indie-days/index.html
@@ -59,7 +59,7 @@
               
           <img
             srcset="
-                /starter-business-music/indie-days/indie-days_hu9764a4f099df89685f3a5a549c671f64_1255882_640x0_resize_q70_linear.jpg 768w,
+                starter-business-music/indie-days/indie-days_hu9764a4f099df89685f3a5a549c671f64_1255882_640x0_resize_q70_linear.jpg 768w,
                 /starter-business-music/indie-days/indie-days_hu9764a4f099df89685f3a5a549c671f64_1255882_768x0_resize_q70_linear.jpg 1024w,
                 /starter-business-music/indie-days/indie-days_hu9764a4f099df89685f3a5a549c671f64_1255882_1366x0_resize_q70_linear.jpg 1920w,
                 /starter-business-music/indie-days/indie-days_hu9764a4f099df89685f3a5a549c671f64_1255882_2048x0_resize_q70_linear.jpg 2x,
@@ -68,6 +68,8 @@
 
             "
             src="../../starter-business-music/indie-days/indie-days_hu9764a4f099df89685f3a5a549c671f64_1255882_1366x0_resize_q70_linear.jpg" class="single-playlist-img starter" id="playerCover">
+
+            <a href="../../starter-business-music/indie-days/indie-days_hu9764a4f099df89685f3a5a549c671f64_1255882_1366x0_resize_q70_linear.jpg">/starter-business-music/indie-days/indie-days_hu9764a4f099df89685f3a5a549c671f64_1255882_1366x0_resize_q70_linear.jpg</a>
 
             
         </figure>
