--- a/starter-business-music/jazz-classics/index.html
+++ b/starter-business-music/jazz-classics/index.html
@@ -59,7 +59,7 @@
               
           <img
             srcset="
-                /starter-business-music/jazz-classics/jazz-classics_hucdf8ad02b0638edd4c9d08c22ca00334_1125009_640x0_resize_q70_linear.jpg 768w,
+                starter-business-music/jazz-classics/jazz-classics_hucdf8ad02b0638edd4c9d08c22ca00334_1125009_640x0_resize_q70_linear.jpg 768w,
                 /starter-business-music/jazz-classics/jazz-classics_hucdf8ad02b0638edd4c9d08c22ca00334_1125009_768x0_resize_q70_linear.jpg 1024w,
                 /starter-business-music/jazz-classics/jazz-classics_hucdf8ad02b0638edd4c9d08c22ca00334_1125009_1366x0_resize_q70_linear.jpg 1920w,
                 /starter-business-music/jazz-classics/jazz-classics_hucdf8ad02b0638edd4c9d08c22ca00334_1125009_2048x0_resize_q70_linear.jpg 2x,
@@ -68,6 +68,8 @@
 
             "
             src="../../starter-business-music/jazz-classics/jazz-classics_hucdf8ad02b0638edd4c9d08c22ca00334_1125009_1366x0_resize_q70_linear.jpg" class="single-playlist-img starter" id="playerCover">
+
+            <a href="../../starter-business-music/jazz-classics/jazz-classics_hucdf8ad02b0638edd4c9d08c22ca00334_1125009_1366x0_resize_q70_linear.jpg">/starter-business-music/jazz-classics/jazz-classics_hucdf8ad02b0638edd4c9d08c22ca00334_1125009_1366x0_resize_q70_linear.jpg</a>
 
             
         </figure>
