--- a/starter-business-music/mainstream-pop/index.html
+++ b/starter-business-music/mainstream-pop/index.html
@@ -59,7 +59,7 @@
               
           <img
             srcset="
-                /starter-business-music/mainstream-pop/mainstream-pop_hue44642cef39576a37dfd1b7f6e9da634_974235_640x0_resize_q70_linear.jpg 768w,
+                starter-business-music/mainstream-pop/mainstream-pop_hue44642cef39576a37dfd1b7f6e9da634_974235_640x0_resize_q70_linear.jpg 768w,
                 /starter-business-music/mainstream-pop/mainstream-pop_hue44642cef39576a37dfd1b7f6e9da634_974235_768x0_resize_q70_linear.jpg 1024w,
                 /starter-business-music/mainstream-pop/mainstream-pop_hue44642cef39576a37dfd1b7f6e9da634_974235_1366x0_resize_q70_linear.jpg 1920w,
                 /starter-business-music/mainstream-pop/mainstream-pop_hue44642cef39576a37dfd1b7f6e9da634_974235_2048x0_resize_q70_linear.jpg 2x,
@@ -68,6 +68,8 @@
 
             "
             src="../../starter-business-music/mainstream-pop/mainstream-pop_hue44642cef39576a37dfd1b7f6e9da634_974235_1366x0_resize_q70_linear.jpg" class="single-playlist-img starter" id="playerCover">
+
+            <a href="../../starter-business-music/mainstream-pop/mainstream-pop_hue44642cef39576a37dfd1b7f6e9da634_974235_1366x0_resize_q70_linear.jpg">/starter-business-music/mainstream-pop/mainstream-pop_hue44642cef39576a37dfd1b7f6e9da634_974235_1366x0_resize_q70_linear.jpg</a>
 
             
         </figure>
