--- a/starter-business-music/now-pop/index.html
+++ b/starter-business-music/now-pop/index.html
@@ -59,7 +59,7 @@
               
           <img
             srcset="
-                /starter-business-music/now-pop/now-pop_hub5fc91d2460832453a7beb0a402868c9_923990_640x0_resize_q70_linear.jpg 768w,
+                starter-business-music/now-pop/now-pop_hub5fc91d2460832453a7beb0a402868c9_923990_640x0_resize_q70_linear.jpg 768w,
                 /starter-business-music/now-pop/now-pop_hub5fc91d2460832453a7beb0a402868c9_923990_768x0_resize_q70_linear.jpg 1024w,
                 /starter-business-music/now-pop/now-pop_hub5fc91d2460832453a7beb0a402868c9_923990_1366x0_resize_q70_linear.jpg 1920w,
                 /starter-business-music/now-pop/now-pop_hub5fc91d2460832453a7beb0a402868c9_923990_2048x0_resize_q70_linear.jpg 2x,
@@ -68,6 +68,8 @@
 
             "
             src="../../starter-business-music/now-pop/now-pop_hub5fc91d2460832453a7beb0a402868c9_923990_1366x0_resize_q70_linear.jpg" class="single-playlist-img starter" id="playerCover">
+
+            <a href="../../starter-business-music/now-pop/now-pop_hub5fc91d2460832453a7beb0a402868c9_923990_1366x0_resize_q70_linear.jpg">/starter-business-music/now-pop/now-pop_hub5fc91d2460832453a7beb0a402868c9_923990_1366x0_resize_q70_linear.jpg</a>
 
             
         </figure>
