--- a/premium-business-music/hit-tracks/index.html
+++ b/premium-business-music/hit-tracks/index.html
@@ -59,7 +59,7 @@
               
           <img
             srcset="
-                /premium-business-music/hit-tracks/hit-tracks_hufb3282f8deef56045c1c4fd01fcbc03d_1518232_640x0_resize_q70_linear.jpg 768w,
+                premium-business-music/hit-tracks/hit-tracks_hufb3282f8deef56045c1c4fd01fcbc03d_1518232_640x0_resize_q70_linear.jpg 768w,
                 /premium-business-music/hit-tracks/hit-tracks_hufb3282f8deef56045c1c4fd01fcbc03d_1518232_768x0_resize_q70_linear.jpg 1024w,
                 /premium-business-music/hit-tracks/hit-tracks_hufb3282f8deef56045c1c4fd01fcbc03d_1518232_1366x0_resize_q70_linear.jpg 1920w,
                 /premium-business-music/hit-tracks/hit-tracks_hufb3282f8deef56045c1c4fd01fcbc03d_1518232_2048x0_resize_q70_linear.jpg 2x,
@@ -68,6 +68,8 @@
 
             "
             src="../../premium-business-music/hit-tracks/hit-tracks_hufb3282f8deef56045c1c4fd01fcbc03d_1518232_1366x0_resize_q70_linear.jpg" class="single-playlist-img " id="playerCover">
+
+            <a href="../../premium-business-music/hit-tracks/hit-tracks_hufb3282f8deef56045c1c4fd01fcbc03d_1518232_1366x0_resize_q70_linear.jpg">/premium-business-music/hit-tracks/hit-tracks_hufb3282f8deef56045c1c4fd01fcbc03d_1518232_1366x0_resize_q70_linear.jpg</a>
 
             
                 <figcaption class="text-tiny">
