--- a/starter-business-music/route-66/index.html
+++ b/starter-business-music/route-66/index.html
@@ -59,7 +59,7 @@
               
           <img
             srcset="
-                /starter-business-music/route-66/route-66_hu648b17389cc9589368230b5564a98cfe_1257743_640x0_resize_q70_linear.jpg 768w,
+                starter-business-music/route-66/route-66_hu648b17389cc9589368230b5564a98cfe_1257743_640x0_resize_q70_linear.jpg 768w,
                 /starter-business-music/route-66/route-66_hu648b17389cc9589368230b5564a98cfe_1257743_768x0_resize_q70_linear.jpg 1024w,
                 /starter-business-music/route-66/route-66_hu648b17389cc9589368230b5564a98cfe_1257743_1366x0_resize_q70_linear.jpg 1920w,
                 /starter-business-music/route-66/route-66_hu648b17389cc9589368230b5564a98cfe_1257743_2048x0_resize_q70_linear.jpg 2x,
@@ -68,6 +68,8 @@
 
             "
             src="../../starter-business-music/route-66/route-66_hu648b17389cc9589368230b5564a98cfe_1257743_1366x0_resize_q70_linear.jpg" class="single-playlist-img starter" id="playerCover">
+
+            <a href="../../starter-business-music/route-66/route-66_hu648b17389cc9589368230b5564a98cfe_1257743_1366x0_resize_q70_linear.jpg">/starter-business-music/route-66/route-66_hu648b17389cc9589368230b5564a98cfe_1257743_1366x0_resize_q70_linear.jpg</a>
 
             
         </figure>
