--- a/starter-business-music/smooth-lounge/index.html
+++ b/starter-business-music/smooth-lounge/index.html
@@ -59,7 +59,7 @@
               
           <img
             srcset="
-                /starter-business-music/smooth-lounge/smooth-lounge_huf38b5200b8af498af31464c367c1c686_1364854_640x0_resize_q70_linear.jpg 768w,
+                starter-business-music/smooth-lounge/smooth-lounge_huf38b5200b8af498af31464c367c1c686_1364854_640x0_resize_q70_linear.jpg 768w,
                 /starter-business-music/smooth-lounge/smooth-lounge_huf38b5200b8af498af31464c367c1c686_1364854_768x0_resize_q70_linear.jpg 1024w,
                 /starter-business-music/smooth-lounge/smooth-lounge_huf38b5200b8af498af31464c367c1c686_1364854_1366x0_resize_q70_linear.jpg 1920w,
                 /starter-business-music/smooth-lounge/smooth-lounge_huf38b5200b8af498af31464c367c1c686_1364854_2048x0_resize_q70_linear.jpg 2x,
@@ -68,6 +68,8 @@
 
             "
             src="../../starter-business-music/smooth-lounge/smooth-lounge_huf38b5200b8af498af31464c367c1c686_1364854_1366x0_resize_q70_linear.jpg" class="single-playlist-img starter" id="playerCover">
+
+            <a href="../../starter-business-music/smooth-lounge/smooth-lounge_huf38b5200b8af498af31464c367c1c686_1364854_1366x0_resize_q70_linear.jpg">/starter-business-music/smooth-lounge/smooth-lounge_huf38b5200b8af498af31464c367c1c686_1364854_1366x0_resize_q70_linear.jpg</a>
 
             
         </figure>
