troubleshooting image urls on single channel pages

--- a/premium-business-music/musica-esencial/index.html
+++ b/premium-business-music/musica-esencial/index.html
@@ -64,12 +64,9 @@
                 /premium-business-music/musica-esencial/musica-esencial_huca63590d15fac5833b70e1ba66df05a6_3456431_1366x0_resize_q70_linear.jpg 1920w,
                 /premium-business-music/musica-esencial/musica-esencial_huca63590d15fac5833b70e1ba66df05a6_3456431_2048x0_resize_q70_linear.jpg 2x,
                 /premium-business-music/musica-esencial/musica-esencial_huca63590d15fac5833b70e1ba66df05a6_3456431_3072x0_resize_q70_linear.jpg 3x,
-                /premium-business-music/musica-esencial/musica-esencial_huca63590d15fac5833b70e1ba66df05a6_3456431_4096x0_resize_q70_linear.jpg 4x,
-
+                /premium-business-music/musica-esencial/musica-esencial_huca63590d15fac5833b70e1ba66df05a6_3456431_4096x0_resize_q70_linear.jpg 4x
             "
             src="../../premium-business-music/musica-esencial/musica-esencial_huca63590d15fac5833b70e1ba66df05a6_3456431_1366x0_resize_q70_linear.jpg" class="single-playlist-img " id="playerCover">
-
-            <a href="../../premium-business-music/musica-esencial/musica-esencial_huca63590d15fac5833b70e1ba66df05a6_3456431_1366x0_resize_q70_linear.jpg">/premium-business-music/musica-esencial/musica-esencial_huca63590d15fac5833b70e1ba66df05a6_3456431_1366x0_resize_q70_linear.jpg</a>
 
             
                 <figcaption class="text-tiny">
