--- a/starter-business-music/acoustic-dream/index.html
+++ b/starter-business-music/acoustic-dream/index.html
@@ -64,12 +64,9 @@
                 /starter-business-music/acoustic-dream/acoustic-dream_hu807d929167f7d0a55a04eb438d97e4a9_1362015_1366x0_resize_q70_linear.jpg 1920w,
                 /starter-business-music/acoustic-dream/acoustic-dream_hu807d929167f7d0a55a04eb438d97e4a9_1362015_2048x0_resize_q70_linear.jpg 2x,
                 /starter-business-music/acoustic-dream/acoustic-dream_hu807d929167f7d0a55a04eb438d97e4a9_1362015_3072x0_resize_q70_linear.jpg 3x,
-                /starter-business-music/acoustic-dream/acoustic-dream_hu807d929167f7d0a55a04eb438d97e4a9_1362015_4096x0_resize_q70_linear.jpg 4x,
-
+                /starter-business-music/acoustic-dream/acoustic-dream_hu807d929167f7d0a55a04eb438d97e4a9_1362015_4096x0_resize_q70_linear.jpg 4x
             "
             src="../../starter-business-music/acoustic-dream/acoustic-dream_hu807d929167f7d0a55a04eb438d97e4a9_1362015_1366x0_resize_q70_linear.jpg" class="single-playlist-img starter" id="playerCover">
-
-            <a href="../../starter-business-music/acoustic-dream/acoustic-dream_hu807d929167f7d0a55a04eb438d97e4a9_1362015_1366x0_resize_q70_linear.jpg">/starter-business-music/acoustic-dream/acoustic-dream_hu807d929167f7d0a55a04eb438d97e4a9_1362015_1366x0_resize_q70_linear.jpg</a>
 
             
         </figure>
