--- a/starter-business-music/fresh-and-trendy/index.html
+++ b/starter-business-music/fresh-and-trendy/index.html
@@ -64,12 +64,9 @@
                 /starter-business-music/fresh-and-trendy/fresh-and-trendy_hua8d612fc5be254aa8d571fca08cfcb49_994792_1366x0_resize_q70_linear.jpg 1920w,
                 /starter-business-music/fresh-and-trendy/fresh-and-trendy_hua8d612fc5be254aa8d571fca08cfcb49_994792_2048x0_resize_q70_linear.jpg 2x,
                 /starter-business-music/fresh-and-trendy/fresh-and-trendy_hua8d612fc5be254aa8d571fca08cfcb49_994792_3072x0_resize_q70_linear.jpg 3x,
-                /starter-business-music/fresh-and-trendy/fresh-and-trendy_hua8d612fc5be254aa8d571fca08cfcb49_994792_4096x0_resize_q70_linear.jpg 4x,
-
+                /starter-business-music/fresh-and-trendy/fresh-and-trendy_hua8d612fc5be254aa8d571fca08cfcb49_994792_4096x0_resize_q70_linear.jpg 4x
             "
             src="../../starter-business-music/fresh-and-trendy/fresh-and-trendy_hua8d612fc5be254aa8d571fca08cfcb49_994792_1366x0_resize_q70_linear.jpg" class="single-playlist-img starter" id="playerCover">
-
-            <a href="../../starter-business-music/fresh-and-trendy/fresh-and-trendy_hua8d612fc5be254aa8d571fca08cfcb49_994792_1366x0_resize_q70_linear.jpg">/starter-business-music/fresh-and-trendy/fresh-and-trendy_hua8d612fc5be254aa8d571fca08cfcb49_994792_1366x0_resize_q70_linear.jpg</a>
 
             
         </figure>
