--- a/starter-business-music/now-pop/index.html
+++ b/starter-business-music/now-pop/index.html
@@ -64,12 +64,9 @@
                 /starter-business-music/now-pop/now-pop_hub5fc91d2460832453a7beb0a402868c9_923990_1366x0_resize_q70_linear.jpg 1920w,
                 /starter-business-music/now-pop/now-pop_hub5fc91d2460832453a7beb0a402868c9_923990_2048x0_resize_q70_linear.jpg 2x,
                 /starter-business-music/now-pop/now-pop_hub5fc91d2460832453a7beb0a402868c9_923990_3072x0_resize_q70_linear.jpg 3x,
-                /starter-business-music/now-pop/now-pop_hub5fc91d2460832453a7beb0a402868c9_923990_4096x0_resize_q70_linear.jpg 4x,
-
+                /starter-business-music/now-pop/now-pop_hub5fc91d2460832453a7beb0a402868c9_923990_4096x0_resize_q70_linear.jpg 4x
             "
             src="../../starter-business-music/now-pop/now-pop_hub5fc91d2460832453a7beb0a402868c9_923990_1366x0_resize_q70_linear.jpg" class="single-playlist-img starter" id="playerCover">
-
-            <a href="../../starter-business-music/now-pop/now-pop_hub5fc91d2460832453a7beb0a402868c9_923990_1366x0_resize_q70_linear.jpg">/starter-business-music/now-pop/now-pop_hub5fc91d2460832453a7beb0a402868c9_923990_1366x0_resize_q70_linear.jpg</a>
 
             
         </figure>
