--- a/premium-business-music/chart-toppers/index.html
+++ b/premium-business-music/chart-toppers/index.html
@@ -64,12 +64,9 @@
                 /premium-business-music/chart-toppers/chart-toppers_huca93c1fdcff99b53e685f85c53567101_3137375_1366x0_resize_q70_linear.jpg 1920w,
                 /premium-business-music/chart-toppers/chart-toppers_huca93c1fdcff99b53e685f85c53567101_3137375_2048x0_resize_q70_linear.jpg 2x,
                 /premium-business-music/chart-toppers/chart-toppers_huca93c1fdcff99b53e685f85c53567101_3137375_3072x0_resize_q70_linear.jpg 3x,
-                /premium-business-music/chart-toppers/chart-toppers_huca93c1fdcff99b53e685f85c53567101_3137375_4096x0_resize_q70_linear.jpg 4x,
-
+                /premium-business-music/chart-toppers/chart-toppers_huca93c1fdcff99b53e685f85c53567101_3137375_4096x0_resize_q70_linear.jpg 4x
             "
             src="../../premium-business-music/chart-toppers/chart-toppers_huca93c1fdcff99b53e685f85c53567101_3137375_1366x0_resize_q70_linear.jpg" class="single-playlist-img " id="playerCover">
-
-            <a href="../../premium-business-music/chart-toppers/chart-toppers_huca93c1fdcff99b53e685f85c53567101_3137375_1366x0_resize_q70_linear.jpg">/premium-business-music/chart-toppers/chart-toppers_huca93c1fdcff99b53e685f85c53567101_3137375_1366x0_resize_q70_linear.jpg</a>
 
             
                 <figcaption class="text-tiny">
