--- a/premium-business-music/throwbacks-and-favs/index.html
+++ b/premium-business-music/throwbacks-and-favs/index.html
@@ -64,12 +64,9 @@
                 /premium-business-music/throwbacks-and-favs/throwbacks-and-favs_huabb4f75df0b955a3231d7244196f8415_4477621_1366x0_resize_q70_linear.jpg 1920w,
                 /premium-business-music/throwbacks-and-favs/throwbacks-and-favs_huabb4f75df0b955a3231d7244196f8415_4477621_2048x0_resize_q70_linear.jpg 2x,
                 /premium-business-music/throwbacks-and-favs/throwbacks-and-favs_huabb4f75df0b955a3231d7244196f8415_4477621_3072x0_resize_q70_linear.jpg 3x,
-                /premium-business-music/throwbacks-and-favs/throwbacks-and-favs_huabb4f75df0b955a3231d7244196f8415_4477621_4096x0_resize_q70_linear.jpg 4x,
-
+                /premium-business-music/throwbacks-and-favs/throwbacks-and-favs_huabb4f75df0b955a3231d7244196f8415_4477621_4096x0_resize_q70_linear.jpg 4x
             "
             src="../../premium-business-music/throwbacks-and-favs/throwbacks-and-favs_huabb4f75df0b955a3231d7244196f8415_4477621_1366x0_resize_q70_linear.jpg" class="single-playlist-img " id="playerCover">
-
-            <a href="../../premium-business-music/throwbacks-and-favs/throwbacks-and-favs_huabb4f75df0b955a3231d7244196f8415_4477621_1366x0_resize_q70_linear.jpg">/premium-business-music/throwbacks-and-favs/throwbacks-and-favs_huabb4f75df0b955a3231d7244196f8415_4477621_1366x0_resize_q70_linear.jpg</a>
 
             
                 <figcaption class="text-tiny">
