--- a/premium-business-music/yesterdays-hits/index.html
+++ b/premium-business-music/yesterdays-hits/index.html
@@ -64,12 +64,9 @@
                 /premium-business-music/yesterdays-hits/yesterdays-hits_hu306031fbb2eb2b65fbdd5c038e0d2e71_2244008_1366x0_resize_q70_linear.jpg 1920w,
                 /premium-business-music/yesterdays-hits/yesterdays-hits_hu306031fbb2eb2b65fbdd5c038e0d2e71_2244008_2048x0_resize_q70_linear.jpg 2x,
                 /premium-business-music/yesterdays-hits/yesterdays-hits_hu306031fbb2eb2b65fbdd5c038e0d2e71_2244008_3072x0_resize_q70_linear.jpg 3x,
-                /premium-business-music/yesterdays-hits/yesterdays-hits_hu306031fbb2eb2b65fbdd5c038e0d2e71_2244008_4096x0_resize_q70_linear.jpg 4x,
-
+                /premium-business-music/yesterdays-hits/yesterdays-hits_hu306031fbb2eb2b65fbdd5c038e0d2e71_2244008_4096x0_resize_q70_linear.jpg 4x
             "
             src="../../premium-business-music/yesterdays-hits/yesterdays-hits_hu306031fbb2eb2b65fbdd5c038e0d2e71_2244008_1366x0_resize_q70_linear.jpg" class="single-playlist-img " id="playerCover">
-
-            <a href="../../premium-business-music/yesterdays-hits/yesterdays-hits_hu306031fbb2eb2b65fbdd5c038e0d2e71_2244008_1366x0_resize_q70_linear.jpg">/premium-business-music/yesterdays-hits/yesterdays-hits_hu306031fbb2eb2b65fbdd5c038e0d2e71_2244008_1366x0_resize_q70_linear.jpg</a>
 
             
                 <figcaption class="text-tiny">
