--- a/starter-business-music/indie-days/index.html
+++ b/starter-business-music/indie-days/index.html
@@ -64,12 +64,9 @@
                 /starter-business-music/indie-days/indie-days_hu9764a4f099df89685f3a5a549c671f64_1255882_1366x0_resize_q70_linear.jpg 1920w,
                 /starter-business-music/indie-days/indie-days_hu9764a4f099df89685f3a5a549c671f64_1255882_2048x0_resize_q70_linear.jpg 2x,
                 /starter-business-music/indie-days/indie-days_hu9764a4f099df89685f3a5a549c671f64_1255882_3072x0_resize_q70_linear.jpg 3x,
-                /starter-business-music/indie-days/indie-days_hu9764a4f099df89685f3a5a549c671f64_1255882_4096x0_resize_q70_linear.jpg 4x,
-
+                /starter-business-music/indie-days/indie-days_hu9764a4f099df89685f3a5a549c671f64_1255882_4096x0_resize_q70_linear.jpg 4x
             "
             src="../../starter-business-music/indie-days/indie-days_hu9764a4f099df89685f3a5a549c671f64_1255882_1366x0_resize_q70_linear.jpg" class="single-playlist-img starter" id="playerCover">
-
-            <a href="../../starter-business-music/indie-days/indie-days_hu9764a4f099df89685f3a5a549c671f64_1255882_1366x0_resize_q70_linear.jpg">/starter-business-music/indie-days/indie-days_hu9764a4f099df89685f3a5a549c671f64_1255882_1366x0_resize_q70_linear.jpg</a>
 
             
         </figure>
