--- a/starter-business-music/route-66/index.html
+++ b/starter-business-music/route-66/index.html
@@ -64,12 +64,9 @@
                 /starter-business-music/route-66/route-66_hu648b17389cc9589368230b5564a98cfe_1257743_1366x0_resize_q70_linear.jpg 1920w,
                 /starter-business-music/route-66/route-66_hu648b17389cc9589368230b5564a98cfe_1257743_2048x0_resize_q70_linear.jpg 2x,
                 /starter-business-music/route-66/route-66_hu648b17389cc9589368230b5564a98cfe_1257743_3072x0_resize_q70_linear.jpg 3x,
-                /starter-business-music/route-66/route-66_hu648b17389cc9589368230b5564a98cfe_1257743_4096x0_resize_q70_linear.jpg 4x,
-
+                /starter-business-music/route-66/route-66_hu648b17389cc9589368230b5564a98cfe_1257743_4096x0_resize_q70_linear.jpg 4x
             "
             src="../../starter-business-music/route-66/route-66_hu648b17389cc9589368230b5564a98cfe_1257743_1366x0_resize_q70_linear.jpg" class="single-playlist-img starter" id="playerCover">
-
-            <a href="../../starter-business-music/route-66/route-66_hu648b17389cc9589368230b5564a98cfe_1257743_1366x0_resize_q70_linear.jpg">/starter-business-music/route-66/route-66_hu648b17389cc9589368230b5564a98cfe_1257743_1366x0_resize_q70_linear.jpg</a>
 
             
         </figure>
