--- a/starter-business-music/smooth-lounge/index.html
+++ b/starter-business-music/smooth-lounge/index.html
@@ -64,12 +64,9 @@
                 /starter-business-music/smooth-lounge/smooth-lounge_huf38b5200b8af498af31464c367c1c686_1364854_1366x0_resize_q70_linear.jpg 1920w,
                 /starter-business-music/smooth-lounge/smooth-lounge_huf38b5200b8af498af31464c367c1c686_1364854_2048x0_resize_q70_linear.jpg 2x,
                 /starter-business-music/smooth-lounge/smooth-lounge_huf38b5200b8af498af31464c367c1c686_1364854_3072x0_resize_q70_linear.jpg 3x,
-                /starter-business-music/smooth-lounge/smooth-lounge_huf38b5200b8af498af31464c367c1c686_1364854_4096x0_resize_q70_linear.jpg 4x,
-
+                /starter-business-music/smooth-lounge/smooth-lounge_huf38b5200b8af498af31464c367c1c686_1364854_4096x0_resize_q70_linear.jpg 4x
             "
             src="../../starter-business-music/smooth-lounge/smooth-lounge_huf38b5200b8af498af31464c367c1c686_1364854_1366x0_resize_q70_linear.jpg" class="single-playlist-img starter" id="playerCover">
-
-            <a href="../../starter-business-music/smooth-lounge/smooth-lounge_huf38b5200b8af498af31464c367c1c686_1364854_1366x0_resize_q70_linear.jpg">/starter-business-music/smooth-lounge/smooth-lounge_huf38b5200b8af498af31464c367c1c686_1364854_1366x0_resize_q70_linear.jpg</a>
 
             
         </figure>
